<resources>
    <string name="app_name">MicroChat</string>


    <string name="tv_message">消息</string>
    <string name="tv_friend">好友</string>
    <string name="tv_dynamic">动态</string>
    <string name="tv_mine">我的</string>
    <string name="tv_setting">设置</string>
    <string name="tv_exit">退出</string>
    <string name="tv_new_friends">新的好友</string>
    <string name="tv_add_friends">添加好友</string>
    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_forget_password">忘记密码？</string>
    <string name="tv_register1">新用户注册</string>
    <string name="tv_detailed_info">详细资料</string>
    <string name="tv_add_friend">添加好友</string>
    <string name="tv_req_add_friend">请求添加好友</string>
    <string name="tv_result_ok">等待对方同意</string>
    <string name="tv_result_error">添加失败，请重新添加</string>
    <string name="tv_result_ok1">等待管理员同意</string>
    <string name="tv_result_error1">申请失败，请重新申请</string>
    <string name="tv_result_error2">申请失败，你已经在群里了，请勿重复申请</string>
    <string name="tv_friend_notice">好友通知</string>
    <string name="tv_friend_apply">好友申请</string>
    <string name="tv_agree">已同意</string>
    <string name="tv_refuse">已拒绝</string>
    <string name="tv_agree1">已同意该申请</string>
    <string name="tv_agree2">已同意该邀请</string>
    <string name="tv_refuse1">已拒绝该申请</string>
    <string name="tv_refuse2">已拒绝该邀请</string>
    <string name="tv_my_info">我的信息</string>
    <string name="tv_account">账号</string>
    <string name="tv_icon">头像</string>
    <string name="tv_sign">个性签名</string>
    <string name="tv_email">电子邮箱</string>
    <string name="tv_birth">生日</string>
    <string name="tv_mobile">手机</string>
    <string name="tv_sex">性别</string>
    <string name="tv_nickname">昵称</string>
    <string name="tv_constellation">星座</string>
    <string name="tv_unfilled">未填写</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_save">保存</string>
    <string name="tv_say_recorder_normal">按住 说话</string>
    <string name="tv_say_recorder_recording">松开 结束</string>
    <string name="tv_say_recorder_want_cancel">松开手指，取消发送</string>
    <string name="tv_code">填写验证信息</string>
    <string name="tv_get_code">获取验证码</string>
    <string name="tv_icon_des">图标</string>
    <string name="tv_dialog_recorder_label_normal">手指上滑，取消发送</string>
    <string name="tv_dialog_recorder_label_up">松开手指，取消发送</string>
    <string name="tv_dialog_recorder_label_too_short">录音时间过短</string>
    <string name="tv_create_team">创建群</string>
    <string name="tv_add_team">添加群组</string>
    <string name="tv_team">群组</string>
    <string name="tv_team_notice">群组通知</string>
    <string name="tv_team_info">群聊资料</string>
    <string name="tv_my_team_name">我的群名片</string>
    <string name="tv_team_member_name">群名片</string>
    <string name="tv_team_name">群组名称</string>
    <string name="tv_team_introduce">群介绍</string>
    <string name="tv_team_bulletin">群公告</string>
    <string name="tv_team_msg_setting">群消息设置</string>
    <string name="tv_team_chat_background_setting">聊天背景</string>
    <string name="tv_my_team_manage">群管理</string>
    <string name="tv_team_number">群成员数量</string>
    <string name="tv_invite_new_members">邀请新成员</string>
    <string name="tv_immediate_invitation">立即邀请</string>
    <string name="tv_immediate_add">立即添加</string>
    <string name="tv_more">更多</string>
    <string name="tv_entry_team_time">入群时间</string>
    <string name="tv_setting_team_manager">设为管理员</string>
    <string name="tv_setting_team_banned">设置禁言</string>
    <string name="tv_manager">管理员</string>
    <string name="tv_apply">申请</string>
    <string name="tv_owner">群主</string>
    <string name="tv_normal">默认</string>
    <string name="tv_team_manage">群管理</string>
    <string name="tv_join_mode">加群方式</string>
    <string name="tv_be_invite_mode">被邀请方式</string>
    <string name="tv_invite_mode">邀请方式</string>
    <string name="tv_update_info_mode">修改资料方式</string>
    <string name="tv_edt_team_info">编辑资料</string>
    <string name="tv_upgrade_team">升级群</string>
    <string name="tv_team_member_setting">成员设置</string>
    <string name="tv_team_function_setting">功能设置</string>
    <string name="tv_mute">群内禁言</string>
    <string name="tv_private">不允许任何人加入</string>
    <string name="tv_free">不用验证</string>
    <string name="tv_need_apply">需要验证</string>
    <string name="tv_need_auth">需要同意</string>
    <string name="tv_no_auth">不需要同意</string>
    <string name="tv_all">所有人</string>
    <string name="tv_mute_all">全员禁言</string>
    <string name="tv_mute_normal">禁言普通成员</string>
    <string name="tv_mute_you">你被禁言了</string>
    <string name="tv_add_manage_member">添加管理员</string>
    <string name="tv_remove_manage_member">移除管理员</string>
    <string name="tv_team_introduce_hint">点击填写群介绍，让大家更了解你的群</string>
    <string name="tv_remakes">备注</string>
    <string name="tv_follow">关注</string>
    <string name="tv_already_follow">已关注</string>
    <string name="tv_recommend">推荐</string>
    <string name="tv_video">视频</string>
    <string name="tv_image_text">图文</string>
    <string name="tv_release">发布</string>
    <string name="tv_shot">拍摄</string>
    <string name="tv_choose_from_mobile_phones">从手机中选择</string>
    <string name="tv_preview">预览</string>
    <string name="tv_view_original_image">查看原图</string>
    <string name="tv_reply">回复</string>
    <string name="tv_colon">：</string>
    <string name="tv_personal_homepage">个人主页</string>
    <string name="tv_praise_num">获赞数</string>
    <string name="tv_comment_num">评论数</string>
    <string name="tv_follow_num">关注数</string>
    <string name="tv_apply_join_team">申请入群</string>
    <string name="tv_validation_info">验证信息</string>
    <string name="tv_personal_introduction">个人介绍</string>
    <string name="tv_invite">邀请你进入</string>
    <string name="tv_apply_join">申请进入</string>
    <string name="tv_untreated">未处理</string>
    <string name="tv_postscript">附言</string>
    <string name="tv_clear_chat_history">清空聊天记录</string>
    <string name="tv_null">无</string>


    <string name="et_account_hint">请输入账号或手机号</string>
    <string name="et_mobile_hint">请输入手机号码</string>
    <string name="et_passwords_hint">请输入密码</string>
    <string name="et_new_passwords_hint">请输入新密码</string>
    <string name="et_team_name_hint">请输入群名称（2～64）</string>
    <string name="et_content_hint">说点什么...</string>


    <string name="btn_agree">同意</string>
    <string name="btn_refuse">拒绝</string>
    <string name="btn_send_message">发消息</string>
    <string name="btn_send">发送</string>
    <string name="btn_submit">提交</string>
    <string name="btn_remove_team">移出本群</string>
    <string name="btn_remove_team1">退出本群</string>
    <string name="btn_dissolution_team">解散本群</string>
    <string name="btn_del_friend">删除好友</string>
    <string name="btn_del">删除</string>
    <string name="btn_boy">男</string>
    <string name="btn_girl">女</string>
    <string name="btn_reset_password">重置密码</string>
    <string name="btn_modify_password">修改密码</string>

</resources>
