<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/tv_icon_des"
                android:src="@drawable/logo" />

            <heath.com.microchat.utils.ClearEditText
                android:id="@+id/et_account"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:hint="@string/et_account_hint"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/gainsboro"
                android:textCursorDrawable="@drawable/cursor_color"
                android:theme="@style/MyEditText" />

            <heath.com.microchat.utils.ClearEditText
                android:id="@+id/et_passwords"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:hint="@string/et_passwords_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/gainsboro"
                android:textCursorDrawable="@drawable/cursor_color"
                android:theme="@style/MyEditText" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/deepskyblue"
                android:text="@string/tv_login"
                android:textColor="@color/white"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/tv_forget_password"
                    android:textColor="@color/deepskyblue" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/tv_register1"
                    android:textColor="@color/deepskyblue" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_label_clarity_black">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pb_loading"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/white" />

        <TextView
            android:id="@+id/tv_loading_text"
            android:layout_below="@id/pb_loading"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

    </RelativeLayout>

</FrameLayout>