<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/deepskyblue">

        <LinearLayout
            android:id="@+id/ll_return"
            android:layout_width="44sp"
            android:layout_height="44sp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:src="@drawable/return1"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/tv_icon_des"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_validation_info"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_personal_introduction"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        >

        <heath.com.microchat.utils.ClearEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:maxLines="3"
            android:background="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:text=""
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_apply_join_team"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/deepskyblue"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/tv_apply_join_team"/>

</LinearLayout>
