<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/deepskyblue">

            <LinearLayout
                android:id="@+id/ll_return"
                android:layout_width="44sp"
                android:layout_height="44sp"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/return1"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/tv_icon_des"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_register1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/logo" />

            <heath.com.microchat.utils.ClearEditText
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/et_account"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:theme="@style/MyEditText"
                android:inputType="number"
                android:textColorHint="@color/gainsboro"
                android:textColor="@color/white"
                android:maxLength="11"
                android:hint="@string/et_mobile_hint" />

            <heath.com.microchat.utils.ClearEditText
                android:textCursorDrawable="@drawable/cursor_color"
                android:id="@+id/et_passwords"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:theme="@style/MyEditText"
                android:inputType="textPassword"
                android:textColorHint="@color/gainsboro"
                android:textColor="@color/white"
                android:hint="@string/et_passwords_hint" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_ver_code"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:theme="@style/MyEditText"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btn_get_code"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/tv_get_code"
                    android:background="@color/deepskyblue"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/deepskyblue"
                android:layout_marginTop="15dp"
                android:text="@string/tv_register"
                android:textColor="@color/white"

                />


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_label_clarity_black">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pb_loading"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/white" />

        <TextView
            android:id="@+id/tv_loading_text"
            android:layout_below="@id/pb_loading"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

    </RelativeLayout>

</FrameLayout>